RESOLVED FIXED280828
WebKit no longer needs to take unbounded network assertions on the network process for downloads
https://bugs.webkit.org/show_bug.cgi?id=280828
Summary WebKit no longer needs to take unbounded network assertions on the network pr...
Chris Dumez
Reported 2024-10-03 08:46:42 PDT
WebKit no longer needs to take unbounded network assertions on the network process for downloads now that dasd is taking this assertion for us.
Attachments
Chris Dumez
Comment 1 2024-10-03 08:47:00 PDT
Chris Dumez
Comment 2 2024-10-03 08:49:23 PDT
EWS
Comment 3 2024-10-07 09:50:25 PDT
Committed 284764@main (b95877fdcedb): <https://commits.webkit.org/284764@main> Reviewed commits have been landed. Closing PR #34631 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.