WebKit no longer needs to take unbounded network assertions on the network process for downloads https://bugs.webkit.org/show_bug.cgi?id=280828 rdar://133715239

Reviewed by Per Arne Vollan.

WebKit no longer needs to take unbounded network assertions on the network process for downloads
now that dasd is taking this assertion for us.

* Source/WTF/wtf/PlatformEnableCocoa.h:
* Source/WebKit/NetworkProcess/Downloads/DownloadMap.cpp: Removed.
* Source/WebKit/NetworkProcess/Downloads/DownloadMap.h:
* Source/WebKit/NetworkProcess/NetworkResourceLoadMap.h:
* Source/WebKit/Sources.txt:
* Source/WebKit/UIProcess/Downloads/DownloadProxyMap.cpp:
(WebKit::DownloadProxyMap::createDownloadProxy):
(WebKit::DownloadProxyMap::downloadFinished):
(WebKit::DownloadProxyMap::invalidate):
* Source/WebKit/UIProcess/Downloads/DownloadProxyMap.h:
* Source/WebKit/WebKit.xcodeproj/project.pbxproj:

Canonical link: https://commits.webkit.org/284764@main