Source/WebKit/UIProcess/Downloads/DownloadProxyMap.cpp
@@ -86,10 +86,8 @@ Ref<DownloadProxy> DownloadProxyMap::createDownloadProxy(WebsiteDataStore& dataS
 
     if (m_downloads.size() == 1 && m_shouldTakeAssertion) {
         ASSERT(!m_downloadUIAssertion);
-        ASSERT(!m_downloadNetworkingAssertion);
         m_downloadUIAssertion = ProcessAssertion::create(getCurrentProcessID(), "WebKit downloads"_s, ProcessAssertionType::UnboundedNetworking);
-        m_downloadNetworkingAssertion = ProcessAssertion::create(protectedProcess().get(), "WebKit downloads"_s, ProcessAssertionType::UnboundedNetworking);
-        RELEASE_LOG(ProcessSuspension, "UIProcess took 'WebKit downloads' assertions for UIProcess and NetworkProcess");
+        RELEASE_LOG(ProcessSuspension, "UIProcess took 'WebKit downloads' assertion for UIProcess");
     }
 
     protectedProcess()->addMessageReceiver(Messages::DownloadProxy::messageReceiverName(), downloadProxy->downloadID().toUInt64(), downloadProxy.get());
@@ -111,10 +109,8 @@ void DownloadProxyMap::downloadFinished(DownloadProxy& downloadProxy)
 
     if (m_downloads.isEmpty() && m_shouldTakeAssertion) {
         ASSERT(m_downloadUIAssertion);
-        ASSERT(m_downloadNetworkingAssertion);
         m_downloadUIAssertion = nullptr;
-        m_downloadNetworkingAssertion = nullptr;
-        RELEASE_LOG(ProcessSuspension, "UIProcess released 'WebKit downloads' assertions for UIProcess and NetworkProcess");
+        RELEASE_LOG(ProcessSuspension, "UIProcess released 'WebKit downloads' assertion for UIProcess");
     }
 }
 
@@ -129,8 +125,7 @@ void DownloadProxyMap::invalidate()
 
     m_downloads.clear();
     m_downloadUIAssertion = nullptr;
-    m_downloadNetworkingAssertion = nullptr;
-    RELEASE_LOG(ProcessSuspension, "UIProcess DownloadProxyMap invalidated - Released 'WebKit downloads' assertions for UIProcess and NetworkProcess");
+    RELEASE_LOG(ProcessSuspension, "UIProcess DownloadProxyMap invalidated - Released 'WebKit downloads' assertion for UIProcess");
 }
 
 } // namespace WebKit
